--- a/web/angular/src/index.html
+++ b/web/angular/src/index.html
@@ -12,5 +12,10 @@
 </head>
 <body>
   <app-root></app-root>
+  <footer>
+    <a href="https://www.linkedin.com/in/abdur-rahman-a61429153" target="_blank">
+      Abdur Rahman
+    </a>
+  </footer>
 </body>
 </html>
