Add mock to run withour backend

--- a/web/angular/src/index.html
+++ b/web/angular/src/index.html
@@ -14,7 +14,7 @@
   <app-root></app-root>
   <footer>
     <a href="https://www.linkedin.com/in/abdur-rahman-a61429153" target="_blank">
-      Abdur Rahman
+      Abdur Rahman - <i>Linkedin</i>
     </a>
   </footer>
 </body>
